--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,13 @@ a {
     color: #5aadbb;
   }
 }
-.content{
+.container{
+  max-width: 1200px;
+  margin: 0px auto;
+  padding: 30px 20px;
+
+}
+.content {
   margin-top: 50px;
 }
 @import "app/common/common";
