--- a/src/app/section/section.scss
+++ b/src/app/section/section.scss
@@ -16,7 +16,20 @@
     }
   }
 }
-
+.logo-mask{
+  position:absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0,0,0, 0.5);
+}
+.logo{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .intro{
   position: relative;
   .section-image{
