--- a/src/app/nav/_nav.scss
+++ b/src/app/nav/_nav.scss
@@ -4,6 +4,7 @@
   top: 0px;
   width: 100%;
   background: $cdef;
+  box-shadow: 0 4px 2px -3px black;
   .nav-items{
     .nav-item{
       border: none;
