--- a/src/index.scss
+++ b/src/index.scss
@@ -75,7 +75,8 @@ a {
   max-width: 1200px;
   margin: 0px auto;
   padding: 30px 20px;
-
+  //position: relative;
+  //z-index: 2;
 }
 .content {
   margin-top: 50px;
