inbuild relese version

--- a/src/app/section/section.scss
+++ b/src/app/section/section.scss
@@ -3,7 +3,7 @@
   display: flex;
   overflow: hidden;
   position: relative;
-  min-height: calc(100vh - 50px);
+  min-height: 100vh;
   .section-header{
     font-size: 45px;
     text-align: center;
